# nav-testbed

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: sample_results.csv
scripts/: live_camera_demo.py  run_parameter_study.py
src/nav_testbed/: __init__.py  stats.py  tracking.py
tests/: test_stats.py  test_tracking.py
