[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nav-testbed"
version = "0.1.0"
description = "Automated accuracy testing framework for optical surgical navigation tracking"
requires-python = ">=3.10"
dependencies = [
    "opencv-contrib-python>=4.8",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
